Apply CSS z-index fix

--- a/src/components/MyNavBar/MyNavBar.scss
+++ b/src/components/MyNavBar/MyNavBar.scss
@@ -1,5 +1,6 @@
 .myNavBar {
     border-top: 3px solid lightblue !important;
+    z-index: 5000 !important;
 
     img.myNavBarLogo {
         margin-right: 1.5em !important;
